--- a/index.html
+++ b/index.html
@@ -1,127 +1,18 @@
-/* 浮动图标样式 */
-#worldbook-manager-icon {
-    position: fixed;
-    bottom: 80px;
-    right: 20px;
-    font-size: 32px; /* 图标大小 */
-    cursor: grab; /* 鼠标悬停时显示为可抓取手势 */
-    z-index: 9999; /* 确保在顶层 */
-    user-select: none; /* 防止拖动时选中文本 */
-    transition: transform 0.2s;
-}
-
-#worldbook-manager-icon:hover {
-    transform: scale(1.1);
-}
-
-#worldbook-manager-icon:active {
-    cursor: grabbing; /* 拖动时显示为抓紧手势 */
-}
-
-
-/* 弹窗遮罩层样式 */
-#worldbook-manager-modal {
-    display: none; /* 默认隐藏 */
-    position: fixed;
-    z-index: 10000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.5); /* 半透明黑色背景 */
-}
-
-/* 弹窗内容样式 */
-#worldbook-manager-modal .modal-content {
-    background-color: #2e2e2e; /* 暗色背景 */
-    color: #f0f0f0;
-    margin: 10% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 600px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-}
-
-/* 弹窗头部 */
-#worldbook-manager-modal .modal-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #444;
-    padding-bottom: 10px;
-    margin-bottom: 15px;
-}
-
-#worldbook-manager-modal .modal-header h2 {
-    margin: 0;
-    font-size: 1.5em;
-}
-
-#worldbook-manager-modal .close-button {
-    color: #aaa;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-#worldbook-manager-modal .close-button:hover,
-#worldbook-manager-modal .close-button:focus {
-    color: #fff;
-    text-decoration: none;
-}
-
-/* 条目列表 */
-#worldbook-entry-list {
-    max-height: 40vh;
-    overflow-y: auto;
-    border: 1px solid #444;
-    padding: 10px;
-    border-radius: 5px;
-}
-
-.worldbook-entry-item {
-    display: flex;
-    align-items: center;
-    padding: 8px;
-    border-bottom: 1px solid #3a3a3a;
-}
-
-.worldbook-entry-item:last-child {
-    border-bottom: none;
-}
-
-.worldbook-entry-item input[type="checkbox"] {
-    margin-right: 15px;
-    transform: scale(1.2); /* 放大复选框 */
-}
-
-/* 弹窗底部按钮 */
-#worldbook-manager-modal .modal-footer {
-    padding-top: 20px;
-    text-align: right;
-}
-
-#worldbook-manager-modal button {
-    background-color: #4CAF50; /* 绿色 */
-    color: white;
-    padding: 10px 18px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    margin-left: 10px;
-}
-
-#worldbook-manager-modal #wb-manager-disable-selected {
-    background-color: #f44336; /* 红色 */
-}
-
-#worldbook-manager-modal #wb-manager-close {
-    background-color: #555; /* 灰色 */
-}
-
-#worldbook-manager-modal button:hover {
-    opacity: 0.8;
-}
+<div id="worldbook-manager-modal">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h2>世界书条目管理器 (Worldbook Manager)</h2>
+            <span class="close-button">×</span>
+        </div>
+        <div class="modal-body">
+            <p>以下是当前已启用的世界书条目。请选择需要操作的条目：</p>
+            <div id="worldbook-entry-list">
+                <!-- 条目列表将由JS动态生成在这里 -->
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button id="wb-manager-disable-selected">禁用选中条目</button>
+            <button id="wb-manager-close">关闭</button>
+        </div>
+    </div>
+</div>
